[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://scenes/TankRigid.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.6
absorbent = true

[node name="PlayerController" type="Node"]
script = ExtResource( 2 )

[node name="PlayerList" type="Node" parent="."]

[node name="Player1" parent="PlayerList" instance=ExtResource( 3 )]
position = Vector2( 821.665, 459.203 )
physics_material_override = SubResource( 1 )

[node name="Player2" parent="PlayerList" instance=ExtResource( 3 )]
position = Vector2( 134.799, 464.208 )
physics_material_override = SubResource( 1 )

[node name="ButtonList" type="Node" parent="."]

[node name="RIGHT" type="Button" parent="ButtonList"]
margin_left = 73.0482
margin_top = 526.236
margin_right = 142.048
margin_bottom = 577.236
text = "RIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEFT" type="Button" parent="ButtonList"]
margin_left = 4.04825
margin_top = 526.236
margin_right = 73.0482
margin_bottom = 577.236
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SHOOT" type="Button" parent="ButtonList"]
margin_left = 919.407
margin_top = 434.758
margin_right = 992.407
margin_bottom = 489.758
text = "SHOOT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="ButtonList"]
margin_left = 919.407
margin_top = 514.049
margin_right = 992.407
margin_bottom = 574.049
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="Button" parent="ButtonList"]
margin_left = 839.0
margin_top = 514.0
margin_right = 919.0
margin_bottom = 574.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonList/SHOOT" to="." method="_on_SHOOT_pressed"]
